--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
-sudo: required
-dist: trusty
+os:
+  - linux
+  - osx
+
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
+      osx_image: xcode7.2
 
 language: python
 
