--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,26 @@ os:
   - osx
 
 dist: trusty
-sudo: required
 
 language: python
 
-python:
-    - "2.7"
+matrix:
+    include:
+        # Use the built in venv for linux builds
+        - os: linux
+          sudo: required
+          python: 2.7
+        # Use generic language for osx
+        - os: osx
+          sudo: required
+          language: generic
+
+# Perform the manual steps on osx to install python2.7 and activate venv
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python2.7; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python2.7; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
 
 install:
     - pip install -r ./.ci/python_requirements
