--- a/.travis.yml
+++ b/.travis.yml
@@ -8,21 +8,19 @@ language: python
 
 matrix:
     include:
-        # Use the built in venv for linux builds
         - os: linux
           sudo: required
           python: 2.7
-        # Use generic language for osx
         - os: osx
           sudo: required
           language: generic
 
-# Perform the manual steps on osx to install python and activate venv
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then tar tvf clang+llvm-3.7.0-x86_64-apple-darwin.tar.xz clang+llvm-3.7.0-x86_64-apple-darwin/lib/libclang.dylib; fi
 
 install:
     - pip install -r ./.ci/python_requirements
