--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ os:
   - linux
   - osx
 
+sudo: required
 dist: trusty
 
 language: python
@@ -9,18 +10,17 @@ language: python
 matrix:
     include:
         - os: linux
-          sudo: required
           python: 2.7
         - os: osx
-          sudo: required
           language: generic
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install llvm --with-clang --with-clang-extra-tools; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl http://llvm.org/releases/3.8.0/clang+llvm-3.8.0-x86_64-apple-darwin.tar.xz -o clang+llvm-3.7.0-x86_64-apple-darwin.tar.xz; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then tar -xzf clang+llvm-3.8.0-x86_64-apple-darwin.tar.xz clang+llvm-3.8.0-x86_64-apple-darwin/lib/libclang.dylib; fi
 
 install:
     - pip install -r ./.ci/python_requirements
