--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,13 @@ matrix:
           language: generic
 
 before_install:
+  - git clone https://github.com/llvm-mirror/clang.git ~/llvm;
+  - export PATH=~/llvm/tools/scan-build-py/bin:$PATH;
+  - chmod a+x ~/llvm/tools/scan-build-py/bin/intercept-build;
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then virtualenv venv -p python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source venv/bin/activate; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then git clone https://github.com/llvm-mirror/clang.git ~/llvm; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PATH=~/llvm/tools/scan-build-py/bin:$PATH; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then chmod a+x ~/llvm/tools/scan-build-py/bin/intercept-build; fi
 
 install:
     - pip install -r ./.ci/python_requirements
